@@ -1,6 +1,19 @@
 package com.jumbo.trus.service;
 
+import com.jumbo.trus.dto.PlayerDTO;
+import com.jumbo.trus.dto.SeasonDTO;
 import com.jumbo.trus.dto.beer.*;
+import com.jumbo.trus.dto.beer.multi.BeerListDTO;
+import com.jumbo.trus.dto.beer.multi.BeerNoMatchDTO;
+import com.jumbo.trus.dto.beer.multi.BeerNoMatchWithPlayerDTO;
+import com.jumbo.trus.dto.beer.response.get.BeerDetailedDTO;
+import com.jumbo.trus.dto.beer.response.get.BeerDetailedResponse;
+import com.jumbo.trus.dto.beer.response.get.BeerSetupResponse;
+import com.jumbo.trus.dto.beer.response.multi.BeerMultiAddResponse;
+import com.jumbo.trus.dto.match.MatchDTO;
+import com.jumbo.trus.entity.filter.MatchFilter;
+import com.jumbo.trus.entity.filter.StatisticsFilter;
+import com.jumbo.trus.entity.repository.specification.BeerStatsSpecification;
 import com.jumbo.trus.mapper.BeerDetailedMapper;
 import com.jumbo.trus.mapper.BeerMapper;
 import com.jumbo.trus.entity.BeerEntity;
@@ -9,14 +22,14 @@ import com.jumbo.trus.entity.repository.BeerRepository;
 import com.jumbo.trus.entity.repository.MatchRepository;
 import com.jumbo.trus.entity.repository.PlayerRepository;
 import com.jumbo.trus.entity.repository.specification.BeerSpecification;
+import com.jumbo.trus.service.helper.PairSeasonMatch;
+import com.jumbo.trus.service.order.OrderBeerByBeerAndLiquorNumberThenName;
+import com.jumbo.trus.service.order.OrderBeerDetailedDTOByBeerAndLiquorNumber;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -30,6 +43,12 @@ public class BeerService {
 
     @Autowired
     private BeerRepository beerRepository;
+
+    @Autowired
+    private MatchService matchService;
+
+    @Autowired
+    private PlayerService playerService;
 
     @Autowired
     private BeerMapper beerMapper;
@@ -67,25 +86,94 @@ public class BeerService {
         return beerRepository.findAll(beerSpecification, PageRequest.of(0, beerFilter.getLimit())).stream().map(beerMapper::toDTO).collect(Collectors.toList());
     }
 
-    public BeerDetailedResponse getAllDetailed(BeerFilter beerFilter) {
+    public BeerDetailedResponse getAllDetailed(StatisticsFilter filter) {
         BeerDetailedResponse beerDetailedResponse = new BeerDetailedResponse();
-        BeerSpecification beerSpecification = new BeerSpecification(beerFilter);
-        List<BeerDetailedDTO> beerList = beerRepository.findAll(beerSpecification, PageRequest.of(0, beerFilter.getLimit())).stream().map(beerDetailedMapper::toDTO).collect(Collectors.toList());
+        BeerStatsSpecification beerSpecification = new BeerStatsSpecification(filter);
+        List<BeerDetailedDTO> beerList = beerRepository.findAll(beerSpecification, PageRequest.of(0, filter.getLimit())).stream().map(beerDetailedMapper::toDTO).toList();
         Set<Long> matchSet = new HashSet<>();
         Set<Long> playerSet = new HashSet<>();
+        HashMap<Long, BeerDetailedDTO> matchMap = new HashMap<>();
+        HashMap<Long, BeerDetailedDTO> playerMap = new HashMap<>();
         for (BeerDetailedDTO beer : beerList) {
             beerDetailedResponse.addBeers(beer.getBeerNumber());
             beerDetailedResponse.addLiquors(beer.getLiquorNumber());
             matchSet.add(beer.getMatch().getId());
             playerSet.add(beer.getPlayer().getId());
+            if (filter.getMatchStatsOrPlayerStats() != null && !filter.getMatchStatsOrPlayerStats()) {
+                beer.setMatch(null);
+                if (!playerMap.containsKey(beer.getPlayer().getId())) {
+                    playerMap.put(beer.getPlayer().getId(), beer);
+                }
+                else {
+                    BeerDetailedDTO oldBeer = playerMap.get(beer.getPlayer().getId());
+                    oldBeer.addBeers(beer.getBeerNumber());
+                    oldBeer.addLiquors(beer.getLiquorNumber());
+                    playerMap.put(beer.getPlayer().getId(), oldBeer);
+                }
+            }
+            if (filter.getMatchStatsOrPlayerStats() != null && filter.getMatchStatsOrPlayerStats()) {
+                beer.setPlayer(null);
+                if (!matchMap.containsKey(beer.getMatch().getId())) {
+                    matchMap.put(beer.getMatch().getId(), beer);
+                }
+                else {
+                    BeerDetailedDTO oldBeer = matchMap.get(beer.getMatch().getId());
+                    oldBeer.addBeers(beer.getBeerNumber());
+                    oldBeer.addLiquors(beer.getLiquorNumber());
+                    matchMap.put(beer.getMatch().getId(), oldBeer);
+                }
+            }
         }
-        beerDetailedResponse.setBeerList(beerList);
+        List<BeerDetailedDTO> returnBeerList;
+        if (filter.getMatchStatsOrPlayerStats() != null && filter.getMatchStatsOrPlayerStats()) {
+            returnBeerList = new ArrayList<>(matchMap.values().stream().toList());
+        }
+        else if (filter.getMatchStatsOrPlayerStats() != null) {
+            returnBeerList = new ArrayList<>(playerMap.values().stream().toList());
+        }
+        else {
+            returnBeerList = new ArrayList<>(beerList);
+        }
+        returnBeerList.sort(new OrderBeerDetailedDTOByBeerAndLiquorNumber());
+        beerDetailedResponse.setBeerList(returnBeerList);
         beerDetailedResponse.setMatchesCount(matchSet.size());
         beerDetailedResponse.setPlayersCount(playerSet.size());
         return beerDetailedResponse;
     }
 
-    public void deleteMatch(Long beerId) {
+    public BeerSetupResponse setupBeers(BeerFilter beerFilter) {
+        PairSeasonMatch pairSeasonMatch = matchService.returnSeasonAndMatchByFilter(beerFilter);
+        SeasonDTO seasonDTO = pairSeasonMatch.getSeasonDTO();
+        MatchDTO matchDTO = pairSeasonMatch.getMatchDTO();
+        MatchFilter matchFilter = new MatchFilter();
+        matchFilter.setSeasonId(seasonDTO.getId());
+        List<MatchDTO> matchList =  matchService.getAll((matchFilter));
+        List<BeerNoMatchWithPlayerDTO> beerNoMatchWithPlayerDTOS = new ArrayList<>();
+        if(matchDTO != null) {
+            List<BeerDTO> beerList = getAll(new BeerFilter(matchDTO.getId()));
+            List<PlayerDTO> playersInMatch = matchService.getPlayerListByMatchId(matchDTO.getId());
+            List<PlayerDTO> addedPlayers = new ArrayList<>();
+            for (BeerDTO beerDTO : beerList) {
+                PlayerDTO playerDTO = playerService.getPlayer(beerDTO.getPlayerId());
+                if (playersInMatch.contains(playerDTO)) {
+                    beerNoMatchWithPlayerDTOS.add(new BeerNoMatchWithPlayerDTO(beerDTO.getId(), beerDTO.getBeerNumber(), beerDTO.getLiquorNumber(), playerDTO));
+                    addedPlayers.add(playerDTO);
+                }
+            }
+            for (PlayerDTO playerDTO : playersInMatch) {
+                if (!addedPlayers.contains(playerDTO)) {
+                    beerNoMatchWithPlayerDTOS.add(new BeerNoMatchWithPlayerDTO(0, 0, playerDTO));
+                }
+            }
+
+            beerNoMatchWithPlayerDTOS.sort(new OrderBeerByBeerAndLiquorNumberThenName());
+
+        }
+
+        return new BeerSetupResponse(matchDTO, seasonDTO, beerNoMatchWithPlayerDTOS, matchList);
+    }
+
+    public void deleteBeer(Long beerId) {
         beerRepository.deleteById(beerId);
     }
 
@@ -109,7 +197,7 @@ public class BeerService {
     private BeerDTO getBeerDtoByPlayerAndMatch(Long matchId, Long playerId) {
         BeerFilter beerFilter = new BeerFilter(matchId, playerId);
         BeerSpecification beerSpecification = new BeerSpecification(beerFilter);
-        List<BeerDTO> filterList = beerRepository.findAll(beerSpecification, PageRequest.of(0, 1)).stream().map(beerMapper::toDTO).collect(Collectors.toList());
+        List<BeerDTO> filterList = beerRepository.findAll(beerSpecification, PageRequest.of(0, 1)).stream().map(beerMapper::toDTO).toList();
         if (filterList.isEmpty()) {
             return null;
         }
